disable truncate user name and fix profile user image by removing background color

--- a/static/css/modal.css
+++ b/static/css/modal.css
@@ -459,7 +459,6 @@
 
 }
 .ep_profile_user_list_username_text{
-    max-width: 130px;
     overflow: hidden;
     font-family: Roboto, RobotoDraft, Helvetica, Arial, sans-serif;
     font-style: normal;
